[package]
name = "sampo"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["wgpu", "snapshot", "eframe"] }
